# Maki-ai

./: .gitignore  README.md
backend/: .env.sample  .gitignore  main.py  processing.py  pyproject.toml  requirements.txt  transcript.txt  videoplayback.m4a
frontend/: .gitignore  README.md  index.html  manifest.json  package-lock.json  package.json  pwabuilder-adv-sw.js  tailwind.config.ts  tsconfig.app.json  wrangler.toml
frontend/src/: App.tsx  clerk-custom.css  index.css  main.tsx
frontend/src/components/: AnimatedBackground.tsx  Calendar.tsx  CalendarWidget.tsx  Header.tsx  HistoryNotificationChecker.tsx  ReminderCard.tsx  RemindersList.tsx  Sidebar.tsx  TaskItem.tsx  TaskList.tsx  TasksList.tsx  VoiceAssistant.tsx
frontend/src/contexts/: DataRefreshContext.tsx  HistoryNotificationContext.tsx
frontend/src/mocks/: testData.ts
frontend/src/pages/: Activities.tsx  Auth.tsx  History.tsx  HistoryViewDetails.tsx  Index.tsx  PersonDetail.tsx  PersonalIntelligence.tsx  SignIn.tsx  SignUp.tsx  TranscriptView.tsx
frontend/src/services/: api.ts
