[project]
name = "maki-ai"
version = "0.1.0"
description = "AI Executive assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "groq>=0.31.1",
    "pymongo>=4.15.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.37.0",
    "python-dotenv>=1.0.0",
]